Fixed up some more css. Should make it easier to work with spacing and scale with the window size

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -288,6 +288,16 @@ hr {
 	z-index: $zindex-fixed;
 }
 
+// First set of cards on home page
+
+.no-marg-pad.row {
+	@extend %no-margin-padding;
+}
+.no-marg-pad.row > .spaced-col {	
+	margin-bottom: 3rem;
+}
+
+
 // Container that holds blog post. Used to apply settings 
 // to all blog post pages.
 .blog-post{
